<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ArtistDetailActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/include_toolbar" />

    <ProgressBar
        android:id="@+id/artist_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id="@+id/artist_name"
        style="@style/textDetailTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"/>

    <View
        android:id="@+id/artist_divider"
        style="@style/cardSeparador"
        app:layout_constraintTop_toBottomOf="@id/artist_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/artist_photo"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_margin="@dimen/default_margin"
        android:src="@drawable/ic_person"
        android:contentDescription="@string/content_artist_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/artist_divider" />

    <LinearLayout
        android:id="@+id/artist_details"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/artist_photo"
        app:layout_constraintTop_toTopOf="@+id/artist_photo">

        <TextView
            style="@style/textDetailHeader"
            android:text="@string/artist_country_header" />

        <TextView
            android:id="@+id/artist_country"
            style="@style/textDetail"
            tools:text="@string/app_name" />

        <TextView
            style="@style/textDetailHeader"
            android:text="@string/artist_website_header" />

        <TextView
            android:id="@+id/artist_website"
            style="@style/textDetail"
            tools:text="@string/app_name" />

    </LinearLayout>

    <TextView
        android:id="@+id/artist_biography"
        style="@style/textDetail"
        android:layout_margin="@dimen/default_margin"
        android:maxLines="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/artist_details"
        tools:text="@string/app_name" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/artist_recycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/default_margin"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/artist_biography" />

</android.support.constraint.ConstraintLayout>